--- a/app/templates/edit_menu_item.html
+++ b/app/templates/edit_menu_item.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Menu Item</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}">
+
 </head>
 <body class="bg-light">
     <div class="container my-5">
@@ -77,7 +79,7 @@
                 option.style.display = "none";
             }
         }
-        outletSelect.value = ""; // Reset outlet selection
+        outletSelect.value = "";
     });
 </script>
 </body>
