--- a/app/templates/landingPage.html
+++ b/app/templates/landingPage.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campus Buddy - Chatbot</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+       <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo.png') }}">
+
     <style>
         body {
             background: linear-gradient(to right, rgba(128, 100, 0, 0.79), #1b1818);
